<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/action_vendor"
        android:title="@string/vendor"
        app:showAsAction="always"
        android:icon="@drawable/shop"/>

    <item
        android:id="@+id/action_match"
        android:title="@string/match"
        app:showAsAction="always"
        android:icon="@drawable/search"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="always"
        android:icon="@drawable/person_circle"/>

</menu>