<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/what_are_looking"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/viewPager2"
            app:layout_constraintBottom_toBottomOf="@id/viewPager2"
            android:background="@color/semiBlack"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/redhat_semibold"
                android:textSize="@dimen/_16sdp"
                android:layout_marginBottom="5dp"
                android:text="@string/what_are_you_looking_for"/>

            <TextView
                android:id="@+id/search_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:hint="@string/find_your_best_match"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/redhat_regular"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/search_bg"
                app:drawableEndCompat="@drawable/ic_search" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_wedding_planner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/viewPager2"
            android:text="@string/find_wedding_vendor"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/redhat_semibold"
            android:textSize="@dimen/_14sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/find_wedding_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/text_wedding_planner"
            tools:listitem="@layout/find_wedding_vendor_layout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"/>


        <TextView
            android:id="@+id/verified_mates_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/find_wedding_rv"
            android:text="@string/verified_mates"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/redhat_semibold"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:id="@+id/see_more_verified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/verified_mates_txt"
            app:layout_constraintBottom_toBottomOf="@id/verified_mates_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/redhat_medium"
            android:textSize="@dimen/_10sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/verified_mates_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/verified_mates_txt"
            tools:listitem="@layout/verified_mates_layout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/trusted_vendor_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/verified_mates_rv"
            android:text="@string/trusted_vendors_for_wedding"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/redhat_semibold"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:id="@+id/see_more_trusted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/trusted_vendor_txt"
            app:layout_constraintBottom_toBottomOf="@id/trusted_vendor_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/redhat_medium"
            android:textSize="@dimen/_10sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trusted_vendor_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/trusted_vendor_txt"
            tools:listitem="@layout/trusted_vendor_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/dashbord_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="find_wedding_rv,what_are_looking,viewPager2,verified_mates_txt,verified_mates_rv,trusted_vendor_rv,trusted_vendor_txt,see_more_trusted,see_more_verified,text_wedding_planner"/>


</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
